Twister LFA dark mode fix

--- a/More/Logfile Analyzer Styling Data.css
+++ b/More/Logfile Analyzer Styling Data.css
@@ -3590,6 +3590,10 @@
 			text.torment-cell.white {
 				fill: #FFF;
 			}
+/* Twister */
+	.dark-mode div.twister-label {
+		color: black;
+	}
 /* Ultimate Team */
 	svg.ultimate-team-winners, svg.ultimate-team-bomb {
 		display: block;
